--- a/babel.config.json
+++ b/babel.config.json
@@ -1,9 +1,18 @@
 {
   "presets": [
     "@babel/preset-env",
+    ["@babel/preset-react", {
+      "runtime": "automatic"
+    }],
     "@babel/preset-typescript"
+
   ],
   "plugins": [
-    "i18next-extract"
+    "i18next-extract",
+    ["transform-imports", {
+      "moduleName": {
+        "transform": "module-name"
+      }
+    }]
   ]
 }
