--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
       - name: unit testing
         if: always()
         run: npm run test:unit
-      - name: build storybook
-        if: always()
-        run: npm run storybook:build
-      - name: screenshot testing
-        if: always()
-        run: npm run test:ui:ci
+#      - name: build storybook
+#        if: always()
+#        run: npm run storybook:build
+#      - name: screenshot testing
+#        if: always()
+#        run: npm run test:ui:ci
 
